from visuelmedia import Visuell_Media
class Film():
    def __call__(self, lengde):
        super().__init__
        self.lengde  = lengde