from visuelmedia import Visuell_Media
class Serie():
    def __call__(self, antall_sesonger):
        super().__init__
        self.antall_sesonger  = antall_sesonger