class Visuell_Media():
    def __init__(self, name, år , IMBN) -> None:
        self.name = name
        self.år  = år
        self.IMBN = IMBN